--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IbrahSoft Solutions - Innovative Tech Solutions & IT Services</title>
-    <meta name="description" content="Find your tech solutions with us. IbrahSoft Solutions offers innovative software, AI, cloud computing, and IT support services. Transform your business with cutting-edge technology." />
+    <title>IBRAHSOFT SOLUTIONS - Innovative Tech Solutions & IT Services</title>
+    <meta name="description" content="Find your tech solutions with us. IbrahSoft Solutions offers innovative software, AI automation, cloud computing, and IT support services. Transform your business with cutting-edge technology." />
     <meta name="author" content="IbrahSoft Solutions" />
     <meta name="keywords" content="tech solutions, software development, AI solutions, cloud computing, IT support, web development, Kenya" />
 
     <meta property="og:title" content="IbrahSoft Solutions - Innovative Tech Solutions" />
     <meta property="og:description" content="Find your tech solutions with us. Expert software, AI, cloud, and IT services." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/preview.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="IbrahSoft Solutions - Tech Solutions" />
     <meta name="twitter:description" content="Innovative software, AI, cloud, and IT services" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/preview.png" />
     
     <link rel="canonical" href="https://lovable.app" />
   </head>
